--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -53,7 +53,7 @@
 			'header'
 			'content';
 		row-gap: 2px;
-
+		border-top: 5px solid #764abc;
 		&.command-content {
 			width: 100%;
 			gap: 0;
