remove background menu

--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -87,7 +87,7 @@
 		padding: 8px 6px;
 		width: 100%;
 		border-radius: 12px;
-		background: rgba($color: $background, $alpha: 1);
+		// background: rgba($color: $background, $alpha: 1);
 
 		.menu-item {
 			margin: 6px 0;
