--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -55,7 +55,7 @@
 			'header'
 			'content';
 		row-gap: 2px;
-		border-top: 5px solid #764abc;
+		border-top: 5px solid #00d4ff;
 		&.command-content {
 			width: 100%;
 			gap: 0;
