update style button n menu

--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -98,6 +98,9 @@
 				justify-content: center;
 				border-radius: 8px;
 				border: none;
+				svg{
+					color: #00bdc2;
+				}
 			}
 		}
 
@@ -126,16 +129,21 @@
 	justify-content: center;
 	border-radius: 6px;
 	gap: 6px;
-
+	text-transform: capitalize;
 	.feature-button {
 		background-color: transparent !important;
-		color: #333 !important;
+		color: #00bdc2 !important;
 		box-shadow: unset !important;
 	}
 }
 
 .menu-active {
-	background-color: #00d4ff !important;
+	// background-color: #00d4ff !important;
+	background: rgb(2,0,36);
+	background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+	background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
 	color: #fff !important;
 	padding-right: 8px !important;
 
