--- a/src/styles/elements/commandMediaList.module.scss
+++ b/src/styles/elements/commandMediaList.module.scss
@@ -21,6 +21,7 @@
 	.list-item {
 		text-align: center;
 		margin-bottom: 1rem;
+		cursor: pointer;
 
 		@include res.media(phone) {
 			margin-bottom: 0;
