--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -10,14 +10,31 @@
 	left: 0;
 	right: 0;
 	display: grid;
-	grid-template: 1fr / 60px 1fr;
+	
 	// YUDI
-	grid-template: 1fr/140px 1fr;
+	// grid-template: 1fr / 60px 1fr;
+	grid-template: 1fr/146px 1fr;
+	// END YUDI
+
 	grid-template-areas: 'sidebar main';
 	background: $background;
 	overflow: auto;
 	scrollbar-width: none;
 	column-gap: 1px;
+	transition: grid-template 0.5s;
+
+	// YUDI
+	&.hidden-menu{
+		display: block;
+
+		.layout-side{
+			left: -146px;
+		}
+
+		.layout-main {
+			width: 100% !important;
+		}
+	}
 
 	@include res.media(tablet) {
 		grid-template: 1fr auto / 1fr;
@@ -32,10 +49,12 @@
 		height: 100%;
 		width: auto;
 		background: $white;
+		left: 0;
 		padding: 0 12px;
 		box-shadow: 0 4px 12px 0 rgba(131, 146, 165, 0.15);
   	border-right: 1px solid rgba(224, 225, 235, 0.85);
 		z-index: 1;
+		transition: left 0.5s;
 
 		@include res.media(tablet) {
 			z-index: 999;
@@ -92,4 +111,5 @@
 			}
 		}
 	}
+
 }
