--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -30,12 +30,21 @@
 		padding: 12px 12px;
 		flex-direction: row;
 		justify-content: center;
+
+		// YUDI
+		height: 100vh;
 	}
 
 	@media screen and (max-width: 370px) {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+
+		// YUDI
+		justify-content: start;
+		width: 52%;
+		background-color: #fff;
+
 	}
 
 	.menu-feature {
@@ -62,6 +71,14 @@
 			margin: 0 8px 0 0;
 			border-right: 2px solid rgba($color: $background, $alpha: 1);
 
+			// YUDI
+			display: flex;
+			flex-direction: column;
+			justify-content: start;
+			align-items: start;
+			width: 100%;
+
+
 			.feature-item {
 				margin: 0 12px 0 0;
 			}
@@ -73,7 +90,6 @@
 			margin: 0 0 6px;
 			border-right: none;
 			border-bottom: 2px solid rgba($color: $background, $alpha: 1);
-
 			.feature-item {
 				margin: 0 6px 6px;
 			}
