--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -72,6 +72,7 @@
 
 		@media screen and (max-width: 370px) {
 			height: 100vh;
+			background-color: transparent;
 			border-radius: 0;
 			border-radius: 0;
 			z-index: 99;
