remove border in menu mobile

--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -76,6 +76,7 @@
 			background-color: transparent;
 			box-shadow: unset;
 			filter: unset;
+			border: none;
 			border-radius: 0;
 			border-radius: 0;
 			z-index: 99;
