--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -35,7 +35,7 @@
 		height: 100vh;
 	}
 
-	@media screen and (max-width: 370px) {
+	@media screen and (max-width: 1023px) {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
@@ -43,6 +43,7 @@
 		// YUDI
 		justify-content: start;
 		width: 52%;
+		max-width: 190px;
 		background-color: #fff;
 		box-shadow: -2px 0px 6px #333;
 
@@ -85,7 +86,7 @@
 			}
 		}
 
-		@media screen and (max-width: 370px) {
+		@media screen and (max-width: 1023px) {
 			width: 100%;
 			justify-content: space-around;
 			margin: 0 0 6px;
@@ -131,7 +132,7 @@
 			}
 		}
 
-		@media screen and (max-width: 370px) {
+		@media screen and (max-width: 1023px) {
 			padding: 3;
 			width: 100%;
 			justify-content: space-around;
