--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -47,12 +47,14 @@
 			'sidebar';
 	}
 
+	// opancops
+
 	.layout-side {
 		grid-area: sidebar;
 		position: fixed;
 		height: 100%;
 		width: auto;
-		background: $white;
+		background: #112143;
 		left: 0;
 		padding: 0 12px;
 		box-shadow: 0 4px 12px 0 rgba(131, 146, 165, 0.15);
@@ -99,9 +101,16 @@
 			gap: 0;
 
 			.main-content {
-				background: $background;
-			}
-		}
+				// background: $background;
+				background-color: #00d4ff !important;
+			// background-color: #00d4ff !important;
+			background: rgb(2,0,36);
+			background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
+					}
+				}
 
 		.main-head {
 			grid-area: header;
@@ -116,7 +125,14 @@
 			height: 100%;
 			padding: 12px;
 			overflow: auto;
-			background: $white;
+			// background: $white;
+			background-color: #00d4ff !important;
+			// background-color: #00d4ff !important;
+			background: rgb(2,0,36);
+			background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
 
 			@include res.media(tablet) {
 				padding: 10px 10px 60px;
@@ -125,6 +141,9 @@
 			@media screen and (max-width: 320px) {
 				padding: 10px 10px 110px;
 			}
+
+				
+			
 		}
 	}
 
