--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -12,7 +12,7 @@
 	.menu-head {
 		margin-bottom: 1rem;
 		padding: 12px 0;
-		border-bottom: 2px solid rgba($color: $background, $alpha: 1);
+		border-bottom: 2px solid #4a4949;
 
 		.head-item {
 			position: relative;
@@ -51,7 +51,7 @@
 
 	.menu-feature {
 		margin-bottom: 1rem;
-		border-bottom: 2px solid rgba($color: $background, $alpha: 1);
+		border-bottom: 2px solid #4a4949;
 
 		.feature-item {
 			margin-bottom: 12px;
@@ -148,7 +148,7 @@
 	gap: 6px;
 	text-transform: capitalize;
 	width: 100%;
-	color: #333;
+	color: #8b97b2;
 
 	.feature-button {
 		background-color: transparent !important;
