--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -54,6 +54,7 @@
 		border-bottom: 2px solid #4a4949;
 
 		.feature-item {
+			color: #ffffff;
 			margin-bottom: 12px;
 			cursor: pointer;
 
@@ -148,7 +149,7 @@
 	gap: 6px;
 	text-transform: capitalize;
 	width: 100%;
-	color: #8b97b2;
+	color: #ffffff;
 
 	.feature-button {
 		background-color: transparent !important;
