--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,8 +1,10 @@
 @import 'color', 'typo', 'media';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 * {
 	box-sizing: border-box;
 	scrollbar-width: thin;
+	font-family: 'Roboto', sans-serif !important;
 }
 
 html,
@@ -12,6 +14,12 @@ body {
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
+	font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
 }
 
 .highlight-text {
