--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -102,13 +102,11 @@
 
 			.main-content {
 				// background: $background;
-				background-color: #00d4ff !important;
 				background: rgb(2,0,36);
-				background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-				background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-				background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-				filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);	
-
+				background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+				background: -webkit-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+				background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1); 
 			}
 		}
 
@@ -118,14 +116,20 @@
 			position: sticky;
 			top: 0;
 			// padding: 12px;
-			// background: $white;
-			background-color: #00d4ff !important;
-			background: rgb(2,0,36);
-			background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-			background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-			background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
+			// // background: $white;
+			// background-color: #00d4ff !important;
+			// background: rgb(2,0,36);
+			// background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			// background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			// background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			// filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
 	
+			background: rgb(2,0,36);
+			background: -moz-linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: -webkit-linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1); 
+
 			.toggleMenuButton {
 				color: white !important;
 			}
@@ -181,7 +185,18 @@
 		.ant-card{
 			padding: 0;
 			color: #fff;
-			background-color: #65add0;
+			background-color: #ffffff59;
+		}
+
+		.ant-form-item-control-input-content{
+			color: #fff;
+		}
+
+		.ant-checkbox + span, .ant-col-24{
+			color: #fff;
+		}
+		.ant-card-small > .ant-card-head > .ant-card-head-wrapper > .ant-card-head-title{
+			color: #fff;
 		}
 
 		.apexcharts-text tspan{
