--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -1,5 +1,6 @@
 @use '../color' as *;
 @use '../media' as res;
+@import url('https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&family=Figtree:wght@300;400;500;600;700;800;900&family=Inter:wght@300;400;600;700&family=Lato:wght@300;400;700&display=swap');
 
 .layout-wrap {
 	height: 100vh;
@@ -17,7 +18,7 @@
 	// END YUDI
 
 	grid-template-areas: 'sidebar main';
-	background: $background;
+	background: #343e59;
 	overflow: auto;
 	scrollbar-width: none;
 	column-gap: 1px;
@@ -56,9 +57,9 @@
 		width: auto;
 		background: #343e59;
 		left: 0;
-		padding: 0 12px;
+		padding: 0 15px;
 		box-shadow: 0 4px 12px 0 rgba(131, 146, 165, 0.15);
-  	border-right: 1px solid rgba(224, 225, 235, 0.85);
+  	border-right: 1px solid rgb(74, 73, 73);
 		z-index: 1;
 		transition: left 0.5s;
 
@@ -214,7 +215,7 @@
 		}
 
 		.total-msb h5{
-			color: #fff;
+			color: #fff !important;
 		}
 
 		.ant-select-single.ant-select-sm:not(.ant-select-customize-input) .ant-select-selector{
