--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -52,7 +52,7 @@
 	.menu-feature {
 		margin-bottom: 1rem;
 		width: 100%;
-		border-bottom: 2px solid #4a4949;
+		// border-bottom: 2px solid #4a4949;
 
 		.feature-item {
 			color: #ffffff;
