--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -188,6 +188,42 @@
 			background-color: #2b2d3e;
 		}
 
+		/* CSS atau SCSS Anda */
+		.ant-collapse-content {
+			background-color: transparent; /* Atur latar belakang transparan */
+		}
+
+		.ant-collapse-header-text{
+			color: #fff;
+		}
+
+		.ant-collapse-content-box{
+			margin-top: 20px;
+		}
+
+		.dashboard-menux .ant-collapse-expand-icon{
+			display: none;
+		}
+
+		.ant-collapse-content > .ant-collapse-content-box{
+			padding: 0
+		}
+
+		.dashboard-menux{
+			margin-bottom: 10px;
+		}
+
+		.dashboard-menux .ant-collapse > .ant-collapse-item{
+			border-left: none;
+			border-top: none;
+			border-right: none;
+		}
+
+		.ant-collapse{
+			border: none;
+			background: none;
+		}
+
 		.ant-form-item-control-input-content{
 			color: #fff;
 		}
