update all feedback data

--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -192,6 +192,10 @@
 			color: #fff;
 		}
 
+		.ant-card-extra{
+			color: #a9a9a9;
+		}
+
 		.ant-checkbox + span, .ant-col-24{
 			color: #fff;
 		}
