--- a/src/styles/elements/commandMediaList.module.scss
+++ b/src/styles/elements/commandMediaList.module.scss
@@ -28,7 +28,7 @@
 		box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.08);
 		position: relative;
 		border-radius: 5px;
-		width: 20%;
+		width: 19%;
 		&:nth-child(1){
 			background-image: linear-gradient( 135deg, #ABDCFF 10%, #0396FF 100%);
 		}
@@ -48,6 +48,7 @@
 
 		&:last-child {
 			margin-bottom: 0;
+			width: 35%;
 		}
 
 		.item {
@@ -72,6 +73,10 @@
 				font-size: 20px;
 			  margin-bottom: -5px;
 			}
+		}
+
+		@include res.media(phone) {
+			width: 44%;
 		}
 	}
 }
