search list coloring white

--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -165,6 +165,9 @@
 			// YUDI
 			
 			:global{
+				.title-search{
+					color: #fff;
+				}
 				.ant-row{
 					@include res.media(phone) {
 						overflow: hidden;
