--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -165,6 +165,7 @@
 			// YUDI
 			
 			:global{
+				
 				.title-search{
 					color: #fff;
 				}
@@ -195,6 +196,11 @@
 	// YUDI
 	
 	:global{
+
+		.anticon-close{
+			padding-top: 10px;
+			color: #fff !important;
+		}
 		.ant-card{
 			padding: 0;
 			color: #fff;
