fixing filter reset

--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -59,6 +59,8 @@
 			color: #ffffff;
 			margin-bottom: 12px;
 			cursor: pointer;
+			display: block;
+			border-radius: 4px;
 
 			.feature-button {
 				display: flex;
@@ -66,6 +68,22 @@
 				justify-content: center;
 				border-radius: 8px;
 				border: none;
+			}
+		}
+		
+		.menu-active {
+			// background-color: #00d4ff !important;
+			background: rgb(2,0,36);
+			background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
+			color: #fff !important;
+			padding-right: 8px !important;
+			color: #fff !important;
+
+			.feature-button {
+				color: #fff !important;
 			}
 		}
 
@@ -166,22 +184,6 @@
 	right: 10px;
 	top: 10px;
 	font-size: 20px;
-}
-
-.menu-active {
-	// background-color: #00d4ff !important;
-	background: rgb(2,0,36);
-	background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-	background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
-	color: #fff !important;
-	padding-right: 8px !important;
-	color: #fff !important;
-
-	.feature-button {
-		color: #fff !important;
-	}
 }
 
 .menu-wrapper {
