--- a/src/styles/elements/menu.module.scss
+++ b/src/styles/elements/menu.module.scss
@@ -56,7 +56,7 @@
 		// border-bottom: 2px solid #4a4949;
 
 		.feature-item {
-			color: #ffffff;
+			color: #000;
 			margin-bottom: 12px;
 			cursor: pointer;
 			display: block;
@@ -72,16 +72,15 @@
 		}
 		
 		.menu-active {
+			background: #30bcec;
 			// background-color: #00d4ff !important;
-			background: rgb(2,0,36);
-			background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-			background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-			background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
+			// background: rgb(2,0,36);
+			// background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			// background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			// background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
+			// filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00bdc2",GradientType=1);
 			color: #fff !important;
 			padding-right: 8px !important;
-			color: #fff !important;
-
 			.feature-button {
 				color: #fff !important;
 			}
@@ -169,7 +168,7 @@
 	gap: 6px;
 	text-transform: capitalize;
 	width: 100%;
-	color: #ffffff;
+	color: #000;
 
 	.feature-button {
 		background-color: transparent !important;
