--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -22,7 +22,8 @@
 	// END YUDI
 
 	grid-template-areas: 'sidebar main';
-	background: #343e59;
+	// background: #343e59;
+	background: #fff;
 	overflow: auto;
 	scrollbar-width: none;
 	column-gap: 1px;
@@ -59,7 +60,8 @@
 		position: fixed;
 		height: 100%;
 		width: auto;
-		background: #343e59;
+		background: #fff;
+		// background: #fff;
 		left: 0;
 		top: 0;
 		padding: 0 10px;
@@ -107,7 +109,8 @@
 			gap: 0;
 
 			.main-content {
-				background: #343e59;
+				// background: #343e59;
+				background: #cfe3fb;
 				// background: rgb(2,0,36);
 				// background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
 				// background: -webkit-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
@@ -122,7 +125,8 @@
 			position: sticky;
 			top: 0;
 			// padding: 12px;
-			background: #343e59;
+			// background: #343e59;
+			background: #fff;
 			// background-color: #00d4ff !important;
 			// background: rgb(2,0,36);
 			// background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
@@ -146,7 +150,8 @@
 			height: 100%;
 			padding: 12px;
 			overflow: auto;
-			background: #343e59;
+			// background: #343e59;
+			background: #cfe3fb;
 			
 			// background: rgb(2,0,36);
 			// background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,59,121,1) 30%, rgba(0,189,194,1) 100%);
@@ -176,7 +181,7 @@
 				}
 				.ant-tabs-tab{
 					.ant-tabs-tab-btn{
-						color: #ffffff;
+						color: #000;
 					}
 				}
 
@@ -185,7 +190,7 @@
 					padding: 10px 20px;
   				border-radius: 5px;
 					.ant-tabs-tab-btn{
-						color: #ffffff;
+						color: #000;
 					}
 				}
 
@@ -209,11 +214,11 @@
 		}
 		.anticon-close{
 			padding-top: 10px;
-			color: #fff !important;
+			color: #30bcec !important;
 		}
 		.ant-card{
 			padding: 0;
-			color: #fff;
+			color: #fff !important;
 			background-color: #2b2d3e;
 		}
 
@@ -223,7 +228,7 @@
 		}
 
 		.ant-collapse-header-text{
-			color: #fff;
+			color: #000;
 		}
 
 		.ant-collapse-content-box{
