--- a/src/styles/layout/login.module.scss
+++ b/src/styles/layout/login.module.scss
@@ -203,7 +203,7 @@
 				.img {
 					width: 30px;
 					height: 30px;
-					background-image: url('../../assets/images/logo-icon.png');
+					background-image: url('../../assets/images/ivo.png');
 					background-size: cover;
 					background-repeat: no-repeat;
 					opacity: 0.3;
